# encrypted-socket-chat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  elgamal.rs  main.rs  math.rs  rsa.rs  tests.rs
src/math/: point.rs  prime.rs
