[package]
name = "encrypted-socket-chat"
version = "0.1.0"
edition = "2024"
authors = ["Akari202 <akaritwo0two@gmail.com>"]
repository = "https://github.com/Akari202/encrypted-socket-chat"

[dependencies]
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
dirs = "6.0.0"
log = "0.4.25"
aes = "0.8.4"
rand = "0.8.5"
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
rayon = "1.10.0"
thiserror = "2.0.12"
more-asserts = "0.3.1"
crossterm = "0.29.0"
ctrlc = "3.4.6"

[dev-dependencies]
test-log = "0.2.17"
serial_test = "3.2.0"
